# agent-quality-workbench

./: .gitignore  README.md  pyproject.toml
docs/: continuation-2026-07-04.md  dashboard.html  index.html  onboarding_log.md  roadmap.md
docs/prompts/: 20260703-generalization.md  20260703-goldset-classic.md  20260703-test-debt.md  20260703-workbench-refactor.md
docs/superpowers/plans/: 2026-07-04-recompile-trigger-layer.md
docs/superpowers/specs/: 2026-07-04-recompile-trigger-layer-design.md
eval/: agents.yaml  drift.py  metric_registry.py  metrics.py  recompile_report.py  regulation_staleness.py  snapshot.py  staleness.py  threshold_resolution.py  thresholds.yaml  trace.py
goldset/: README.md  compliance-review-agent.yaml  contract-approval-agent.yaml
reports/: case_history.jsonl  history.jsonl
rubric/: complexity_ladder.yaml
scenarios/: compliance_review.yaml  contract_approval.yaml  quote_generation.yaml
scripts/: build_site.py  run_dashboard.py  run_recompile_check.py  run_scorer.py
tests/: test_classic_trace.py  test_goldset.py  test_recompile.py  test_stability.py  test_workbench.py
verticals/: README.md
verticals/legal-compliance/: profile.yaml
