[project]
name = "agent-quality-workbench"
version = "0.1.0"
description = "PM-side decision & evaluation workbench for agent projects"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
